--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ canvas {
 }
 
 .attention-textarea {
-  margin-top: 350px;
+  margin-top: 80%;
   width: 120px;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 13px;
