--- a/style.css
+++ b/style.css
@@ -26,10 +26,10 @@ canvas {
 }
 
 .attention-textarea {
-  margin-top: 90%;
+  margin-top: 400px;
   width: 120px;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 16px;
+  font-size: 14px;
   text-align: center;
   color: gray;
   z-index: 999;
