--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body, html {
   padding: 0;
   overflow: hidden;
   height: 100%;
-  background: url('night_drive.jpg') no-repeat center center fixed;
+  background: url('nightdrive2.jpg') no-repeat center center fixed;
   background-size: cover;
 }
 
